# TradePulse

./: .commitlintrc.yml  .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  =2.3.3  =2.5.0  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_SECURITY_AUDIT.md  DEPLOYMENT.md  DOCUMENTATION_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NOTICE  PIP_SECURITY_UPGRADE.md  PR_BODY.md  README.md  README.txt  ROADMAP.md  SCRIPT_IMPROVEMENTS.md  SECURITY.md  TESTING.md  TESTING_SUMMARY.md  THIRD_PARTY_LICENSES.md  UPGRADE_SUMMARY.md  bandit-report.json  buf.gen.yaml  codecov.yml  commitlint.config.cjs  conftest.py  constraints.txt  container_entrypoint.py  dev.in  (+20 more)
.github/: BRANCH_PROTECTION_SETUP.md  CODEOWNERS  SECURITY_IMPLEMENTATION.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  intervention_request.yml
.github/workflows/: README_COVERAGE.md  buf-lint.yml  build-wheels.yml  ci-tests.yml  ci.yml  codeql.yml  commitlint.yml  coverage.yml  dependabot-auto-merge.yml  deploy-environments.yml  docker-build.yml  hotfix.yml  intervention-gate.yml  lint.yml  mutation-tests.yml  pr-quality-gate.yml  pr-quality-labels.yml  publish-image.yml  publish-python.yml  release-drafter.yml  research-artifacts.yml  sbom.yml  security.yml  smoke-e2e.yml  tests.yml
analytics/: __init__.py  amm_metrics.py  environment_parity.py  execution_quality.py  liquidity_impact.py  portfolio_attribution.py  portfolio_risk.py  runner.py  tca.py
analytics/finops/: __init__.py  cost_reports.py
analytics/signals/: __init__.py  pipeline.py
analytics/tests/: test_liquidity_impact_model.py  test_portfolio_attribution.py  test_portfolio_risk.py  test_runner_safety.py  test_tca.py
application/: __init__.py  settings.py  system.py  system_orchestrator.py  trading.py
application/api/: __init__.py  idempotency.py  (+5 more)
backtest/: __init__.py  engine.py  event_driven.py  events.py  execution_simulation.py  market_calendar.py  monte_carlo.py  performance.py  resampling.py  synthetic.py  time_splits.py  transaction_costs.py
bench/: bench_amm.py  bench_indicators.py  bench_numeric_accelerators.py  bench_pipeline.py
ci/: compare_coverage.py
cli/: __init__.py  amm_cli.py  tradepulse_cli.py
conf/: config.yaml  trading.yaml
configs/: __init__.py  kuramoto_ricci_composite.yaml  script_runner.yml  secrets.py  settings.py
core/: backtest.py  engine.py  execution.py  mlflow_utils.py  tca.py  utils_time.py
data/: __init__.py  loaders.py  reference_bars.csv  sample.csv
deploy/: alertmanager.yml  prometheus.yml  tradepulse-deployment.yaml
docs/: ARCHITECTURE.md  FPM-A.md  GIP_SYSTEM_PROMPT.md  admin_remote_control.md  advanced-testing-observability.md  agent.md  architecture-diagrams.md  automation-summary.md  backtest.md  canary_release_guardrails.md  chaos_cost_controls.md  cli.md  configuration.md  cookbook_backtest_live.md  dataset_catalog.md  deployment.md  docker-quickstart.md  documentation_governance.md  execution.md  extending.md  faq.md  feature_store_sync_and_registry.md  governance.md  improvement_plan.md  index.md  indicators.md  indicators_api.md  indicators_examples.md  indicators_upgrade_summary.md  installation.md  integration-api.md  monitoring.md  numeric_determinism.md  onboarding.md  operational_handbook.md  operational_readiness_runbooks.md  performance.md  portfolio_scheduler_api.md  postmortem_template.md  pr-quality-gate.md  (+24 more)
domain/: __init__.py  order.py  position.py  signal.py
examples/: analyze_output.json  backtest_output.json  indicators_demo.py  performance_demo.py  quick_start.py
execution/: __init__.py  adapters.py  algorithms.py  amm_runner.py  audit.py  canary.py  capital_optimizer.py  compliance.py  connectors.py  live_loop.py  normalization.py  oms.py  order.py  order_ledger.py  order_lifecycle.py  orderbook.py  paper_trading.py  reconciliation.py  risk.py  rollout.py  shadow.py  watchdog.py
interfaces/: README.md  __init__.py  backtest.py  cli.py  dashboard_streamlit.py  dashboard_telemetry.py  ingestion.py  live_runner.py  scenario_templates.py
libs/: __init__.py
nfpro/: __main__.py
notebooks/: EDA.ipynb  WFA_report.ipynb
observability/: README.md  __init__.py  alerts.json  cache_warmup.py  drift.py  exporters.py  finops.py  health.py  health_checks.py  health_monitor.py  logging.py  metrics.json  notifications.py  otel-collector-config.yaml  telemetry.py  tracing.py
patches/: ci.yml.diff  tests.yml.diff
reports/: ci_html_reports.py  complexity.json  coverage_analysis_report.md  production_readiness.md  release_readiness.md  reliability_scorecard.md  validation_pr799.md
risk/: __init__.py  limits.py  manager.py  sizing.py
rust/tradepulse-accel/: Cargo.toml  README.md
rust/tradepulse-accel/benches/: numeric.rs
rust/tradepulse-accel/src/: lib.rs
sbom/: combined-requirements.txt  cyclonedx-sbom.json
scripts/: .env.example  README.md  README_data_sanity.md  README_dependency_audit.md  README_smoke_e2e.md  __init__.py  __main__.py  _runtime_core.py  automation.py  check_sbom_licenses.py  cli.py  data_sanity.py  dep_update.sh  dependency_audit.py  dev-down.sh  dev-up.sh  export_tradepulse_schema.py  fpma.sh  gen-proto.sh  gen_synth_amm_data.py  generate_openapi.py  integrate_kuramoto_ricci.py  lint.sh  manage_scripts.py  registry.yaml  resilient_data_sync.py  resilient_data_sync.sh  runtime.py  schemas.py  security_audit.py  smoke_e2e.py  supply_chain.py  test.sh  tutorial_sample_data.py  validate_experiment_configs.py
strategies/: __init__.py  base.py  meanrev.py  trend.py
tests/: __init__.py  conftest.py  test_amm.py  test_backtest.py  test_composite.py  test_entropy.py  test_features_base.py  test_hurst.py  test_kuramoto.py  test_math_ops.py  test_meanrev.py  test_preprocess.py  test_properties.py  test_ricci.py  test_risk.py  test_time_splits.py  test_trend.py  tolerances.py
tools/: check_mypy_overrides.py  fpma_runner.py  pytest_asyncio_fallback.py
yaml/: __init__.py
(+757 files in other folders)
