[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradepulse"
dynamic = ["version", "readme"]
description = "Advanced algorithmic trading framework with geometric market indicators"
authors = [{ name = "TradePulse Contributors" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["trading", "quant", "algorithmic", "markets", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "pandas>=2.3.3",
    "networkx>=3.5",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.11.0,<3.0.0",
    "pandera>=0.20.4,<0.21",
    "exchange-calendars>=4.11.1",
    "PyYAML>=6.0.3",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "prometheus-client>=0.23.1",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "httpx>=0.28.1",
    "websockets>=15.0.1",
    "ccxt>=4.5.9",
    "tenacity>=9.1.2",
    "aiolimiter>=1.2.1",
    "pyarrow>=21.0.0",
    "jinja2>=3.1.6",
    "setuptools>=78.1.1",
    "requests>=2.32.5",
    "urllib3>=2.5.0",
    "idna>=3.10",
    "certifi>=2025.10.5",
]

[project.optional-dependencies]
connectors = [
    "ccxt>=4.5.9",
    "websockets>=15.0.1",
    "alpaca-py>=0.18.0",
    "polygon-api-client>=1.15.0",
]
dev = [
    "black>=25.1.0",
    "ruff>=0.14.0",
    "mypy>=1.8.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.2",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.6.1",
    "pytest-profiling>=1.7.0",
    "hypothesis>=6.140.3",
    "scalene>=1.5.55",
    "py-spy>=0.4.1",
    "bandit>=1.8.0",
    "protobuf>=5.29.5",
    "build>=1.3.0",
    "twine>=5.1.1",
    "pip-tools>=7.5.1",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.8",
    "mike>=2.0.0",
]
gpu = [
    "numba>=0.60.0",
    "cupy>=13.0.0",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["."]
include = [
    "analytics",
    "analytics.*",
    "application",
    "application.*",
    "backtest",
    "backtest.*",
    "core",
    "core.*",
    "domain",
    "domain.*",
    "execution",
    "execution.*",
    "interfaces",
    "interfaces.*",
    "markets",
    "markets.*",
    "nfpro",
    "nfpro.*",
    "observability",
    "observability.*",
    "tools",
    "tools.*",
]
exclude = ["tests", "tests.*", "docs", "docs.*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.mypy]
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]
