[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradepulse"
dynamic = ["version", "readme"]
description = "Advanced algorithmic trading framework with geometric market indicators"
authors = [{ name = "TradePulse Contributors" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["trading", "quant", "algorithmic", "markets", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=2.3.3; python_version >= \"3.10\"",
    "numpy>=1.26.4,<2.0; python_version < \"3.10\"",
    "scipy>=1.16.2; python_version >= \"3.10\"",
    "scipy>=1.10.0,<1.11; python_version < \"3.10\"",
    "pandas>=2.3.3",
    "networkx>=3.5; python_version >= \"3.11\"",
    "networkx>=3.4.2,<3.5; python_version < \"3.11\"",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.11.0,<3.0.0",
    "pandera>=0.20.4,<0.21",
    "exchange-calendars>=4.11.1",
    "PyYAML>=6.0.3",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "prometheus-client>=0.23.1",
    "click>=8.1.7",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "httpx>=0.28.1",
    "websockets>=15.0.1",
    "ccxt>=4.5.9",
    "tenacity>=9.1.2",
    "aiolimiter>=1.2.1",
    "pyarrow>=21.0.0",
    "jinja2>=3.1.6",
    "setuptools>=78.1.1",
    "requests>=2.32.5",
    "urllib3>=2.5.0",
    "idna>=3.10",
    "certifi>=2025.10.5",
]

[project.optional-dependencies]
connectors = [
    "ccxt>=4.5.9",
    "websockets>=15.0.1",
    "alpaca-py>=0.18.0",
    "polygon-api-client>=1.15.0",
]
dev = [
    "black>=25.1.0",
    "ruff>=0.14.0",
    "mypy>=1.8.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.2",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.6.1",
    "pytest-profiling>=1.7.0; python_version < \"3.13\"",
    "hypothesis>=6.140.3",
    "scalene>=1.5.55",
    "py-spy>=0.4.1",
    "bandit>=1.8.0",
    "protobuf>=5.29.5",
    "build>=1.3.0",
    "twine>=5.1.1",
    "pip-tools>=7.5.1",
    "mutmut>=2.4.5",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.8",
    "mike>=2.0.0",
]
gpu = [
    "numba>=0.60.0",
    "cupy>=13.0.0",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["."]
include = [
    "analytics",
    "analytics.*",
    "application",
    "application.*",
    "backtest",
    "backtest.*",
    "core",
    "core.*",
    "domain",
    "domain.*",
    "execution",
    "execution.*",
    "interfaces",
    "interfaces.*",
    "markets",
    "markets.*",
    "nfpro",
    "nfpro.*",
    "observability",
    "observability.*",
    "tools",
    "tools.*",
]
exclude = ["tests", "tests.*", "docs", "docs.*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.mypy]
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.cibuildwheel]
build = [
    "cp39-manylinux_x86_64",
    "cp39-manylinux_aarch64",
    "cp39-musllinux_x86_64",
    "cp39-musllinux_aarch64",
    "cp310-manylinux_x86_64",
    "cp310-manylinux_aarch64",
    "cp310-musllinux_x86_64",
    "cp310-musllinux_aarch64",
    "cp311-manylinux_x86_64",
    "cp311-manylinux_aarch64",
    "cp311-musllinux_x86_64",
    "cp311-musllinux_aarch64",
    "cp312-manylinux_x86_64",
    "cp312-manylinux_aarch64",
    "cp312-musllinux_x86_64",
    "cp312-musllinux_aarch64",
    "cp313-manylinux_x86_64",
    "cp313-manylinux_aarch64",
    "cp313-musllinux_x86_64",
    "cp313-musllinux_aarch64",
    "cp39-win_amd64",
    "cp310-win_amd64",
    "cp311-win_amd64",
    "cp312-win_amd64",
    "cp313-win_amd64",
    "cp39-macosx_universal2",
    "cp310-macosx_universal2",
    "cp311-macosx_universal2",
    "cp312-macosx_universal2",
    "cp313-macosx_universal2",
]
build-verbosity = 1
test-command = "python -m pytest --maxfail=1 --disable-warnings \"{project}/tests/smoke\""
test-requires = ["pytest"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"
repair-wheel-command = "auditwheel show {wheel} && auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
archs = ["universal2"]
repair-wheel-command = "delocate-listdeps {wheel} && delocate-wheel -w {dest_dir} {wheel}"

[tool.mutmut]
paths_to_mutate = [
    "core/indicators",
    "backtest/engine.py",
    "execution/oms.py",
    "execution/risk.py",
]
runner = "python -m pytest --maxfail=1 --disable-warnings"
tests_dir = "tests"
use_coverage = true
